<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">INOnaVigATION</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hybrid_mode">Hybrid Mode</string>
    <string name="show_traffic">Show Traffic</string>
    <string name="clear_markers">Clear markers</string>
    <string name="start_animation">Start Animation</string>
    <string name="stop_animation">Stop Animation</string>
    <string name="driving">Driving</string>
    <string name="bicycling">Bicycling</string>
    <string name="walking">Walking</string>
    <string name="travelling_mode">Travelling Mode</string>
    <string name="airport">Airport</string>
    <string name="atm">ATM</string>
    <string name="bank">Bank</string>
    <string name="bus_station">Bus Station</string>
    <string name="hospital">Hospital</string>
    <string name="mosque">Mosque</string>
    <string name="movie_theater">Movie Theater</string>
    <string name="restaurant">Restaurant</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="animation_menu_settings">Settings</string>
    <string name="autocomplete_menu_item">Auto Complete Menu</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="tooltip">This is the tooltip</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="place_icon">Place Icon</string>
    <string name="add_bookmarks">Add Bookmarks</string>
    <string name="route_nearby_places">Route</string>
    <string name="add_database_nearby_places">Add Bookmarks</string>
    <string name="address_text">Address</string>
    <string name="title_text">Title</string>
    <string name="add_database_button">Add Bookmarks</string>
    <string name="edit_database_button">Update</string>
    <string name="cancel_database_button">Cancel</string>
    <string name="delete">Delete</string>
    <string name="travelling_autocomplete_text_menu_item">Directions</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="desc">Route</string>
    <string name="load_directions">Load Directions</string>
    <string name="directions_input">Directions Input</string>
    <string name="map_type">Map Type</string>
    <string name="normal_map">Normal Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="get_route">Route</string>
    <string name="current_loc">Current Location</string>
    <string name="dest_loc">Destination Location</string>

</resources>