<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/travelling_clear_locations"
        android:showAsAction="ifRoom"
        android:title="@string/clear_markers"
        android:icon="@drawable/ic_action_discard"/>
    <item
        android:id="@+id/get_route"
        android:showAsAction="ifRoom"
        android:title="@string/get_route"
        android:icon="@drawable/bookmarksroute"/>
    <item
        android:id="@+id/map_types"
        android:showAsAction="ifRoom"
        android:title="@string/map_type"
        android:icon="@drawable/map">
        <menu>
            <item
                android:id="@+id/travelling_normal_map"
                android:title="@string/normal_map"/>
            <item
                android:id="@+id/travelling_satellite_map"
                android:title="@string/satellite_map"/>
            <item
                android:id="@+id/travelling_terrain_map"
                android:title="@string/terrain_map"/>
            <item
                android:id="@+id/travelling_hybrid_map"
                android:title="@string/hybrid_map"/>
        </menu>
    </item>

</menu>