<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/address_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none" />

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/title_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_database_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_database_button" />

        <Button
            android:id="@+id/cncl_database_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_database_button" />
    </LinearLayout>

</LinearLayout>